# CppCodingStyle

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
